Trying to fix Windows Webfont spacing issue

--- a/prework/css/lab4/restaurantStyles.css
+++ b/prework/css/lab4/restaurantStyles.css
@@ -1,3 +1,9 @@
+html {
+  line-height: 1; /* Trying to fix Windows Webfont spacing issue */
+  float: left; /* Trying to fix Windows Webfont spacing issue */
+  width: 100%; /* Trying to fix Windows Webfont spacing issue */
+}
+
 body {
   font-family: "Courier New", monospace;
   font-size: 17px;
